feat: add simple CRUD

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "semi": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "tabWidth": 4,
+  "printWidth": 100,
+  "arrowParens": "avoid",
+  "trailingComma": "none",
+  "bracketSpacing": false
 }
